--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,7 +204,7 @@ a:focus {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #000000;
+  background-color: #ffffff;
   top: -10px;
   border-radius: 5px;
   -webkit-transition: all .3s;
